fix mathjax horizontal scroll bars

--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@ code {
 
 mjx-container {
   display: inline-grid;
-  overflow-x: auto;
+  overflow-x: hidden;
   overflow-y: hidden;
   max-width: 100%;
 }
